try jplayer for client

--- a/public/cli/index.html
+++ b/public/cli/index.html
@@ -8,7 +8,7 @@
 <ul>
 <li><a href="essai01.html">essai01</a></li>
 <li><a href="essai02.html">essai02</a> Html5 video tag with cloud.comptoir.net mp4 video</li>
-<li><a href="essai03.html">essai03</a></li>
+<li><a href="essai03.html">essai03</a> Html video play <a href="http://www.jplayer.org">jplayer.org</a></li>
 </ul>
 </body>
 </html>
