--- a/public/cli/essai03.html
+++ b/public/cli/essai03.html
@@ -7,17 +7,34 @@
 </head>
 <body>
 
+<div id="jp_container_1" class="jp-video " role="application" aria-label="media player">
+  <div class="jp-type-single">
+    <div id="jquery_jplayer_1" class="jp-jplayer"></div>
+  </div>
+</div>
+
 <script src="/js/require.js"></script>
 <script>
 "use strict" ;
-require(['jquery'], function($) {
-    //$('body').css('background-color', 'black');
-    toto();
-  });
-function toto()
-{
+require(['jquery','jplayer'], function($) {
+
 	$('body').css('background-color', 'black');
-}
+
+    $("#jquery_jplayer_1").jPlayer({
+        ready: function () {
+          $(this).jPlayer("setMedia", {
+            title: "Big Buck Bunny Trailer",
+            m4v: "http://www.jplayer.org/video/m4v/Big_Buck_Bunny_Trailer.m4v",
+            ogv: "http://www.jplayer.org/video/ogv/Big_Buck_Bunny_Trailer.ogv",
+            poster: "http://www.jplayer.org/video/poster/Big_Buck_Bunny_Trailer_480x270.png"
+          }).jPlayer("play");;
+        },
+        cssSelectorAncestor: "#jp_container_1",
+        preload: "auto",
+        supplied: "m4v, ogv"
+	});
+});
+
 </script>
 </body>
 </html>
