try some html5 tips

--- a/public/cli/essais/index.html
+++ b/public/cli/essais/index.html
@@ -9,6 +9,8 @@
 <li><a href="essai01.html">essai01</a></li>
 <li><a href="essai02.html">essai02</a> Html5 video tag with cloud.comptoir.net mp4 video</li>
 <li><a href="essai03.html">essai03</a> Html video play <a href="http://www.jplayer.org">jplayer.org</a></li>
+<li><a href="essai04.html">essai04</a> Html jplayer and full window size</li>
+<li><a href="essai05.html">essai05</a> Html5 full screen</li>
 </ul>
 </body>
 </html>
