--- a/public/clients/essais/index.html
+++ b/public/clients/essais/index.html
@@ -11,6 +11,7 @@
 <li><a href="essai03.html">essai03</a> Html video play <a href="http://www.jplayer.org">jplayer.org</a></li>
 <li><a href="essai04.html">essai04</a> Html jplayer and full window size</li>
 <li><a href="essai05.html">essai05</a> Html5 full screen</li>
+<li><a href="essai06.html">essai06</a> Html5 Worker</li>
 </ul>
 </body>
 </html>
