--- a/public/clients/essais/index.html
+++ b/public/clients/essais/index.html
@@ -12,6 +12,7 @@
 <li><a href="essai04.html">essai04</a> Html jplayer and full window size</li>
 <li><a href="essai05.html">essai05</a> Html5 full screen</li>
 <li><a href="essai06.html">essai06</a> Html5 Worker</li>
+<li><a href="essai07.html">essai07</a> replace video by another video</li>
 </ul>
 </body>
 </html>
