--- a/public/clients/essais/essai02.html
+++ b/public/clients/essais/essai02.html
@@ -5,10 +5,10 @@
 <title>Essai02</title>
 </head>
 <body>
-<video src="https://cloud.comptoir.net/public.php?service=files&t=daded4130946466782bd44adfabf7b30&download"
-	controls="controls" 
-	preload="auto"
-	autoplay="true"
-	> Ici la description alternative</video>
+	<video
+		src="https://cloud.comptoir.net/public.php?service=files&t=daded4130946466782bd44adfabf7b30&download"
+		controls="controls" preload="auto" autoplay="true"> Ici la
+		description alternative
+	</video>
 </body>
 </html>
