--- a/public/clients/essais/essai03.html
+++ b/public/clients/essais/essai03.html
@@ -7,14 +7,15 @@
 </head>
 <body>
 
-<div id="jp_container_1" class="jp-video " role="application" aria-label="media player">
-  <div class="jp-type-single">
-    <div id="jquery_jplayer_1" class="jp-jplayer"></div>
-  </div>
-</div>
+	<div id="jp_container_1" class="jp-video " role="application"
+		aria-label="media player">
+		<div class="jp-type-single">
+			<div id="jquery_jplayer_1" class="jp-jplayer"></div>
+		</div>
+	</div>
 
-<script src="/js/require.js"></script>
-<script>
+	<script src="/js/require.js"></script>
+	<script>
 "use strict" ;
 require(['jquery','jplayer'], function($) {
 
