--- a/public/clients/essais/essai04.html
+++ b/public/clients/essais/essai04.html
@@ -7,20 +7,21 @@
 </head>
 <body>
 
-<!--
+	<!--
 fonctionnement sur ARNOVA 10b G3 :
 	Chrome : NON
 	Navigateur : OUI
 	Dolphin : OUI  
  -->
-<div id="jp_container" class="jp-video " role="application" aria-label="media player">
-  <div class="jp-type-single">
-    <div id="jquery_jplayer" class="jp-jplayer"></div>
-  </div>
-</div>
+	<div id="jp_container" class="jp-video " role="application"
+		aria-label="media player">
+		<div class="jp-type-single">
+			<div id="jquery_jplayer" class="jp-jplayer"></div>
+		</div>
+	</div>
 
-<script src="/js/require.js"></script>
-<script>
+	<script src="/js/require.js"></script>
+	<script>
 "use strict" ;
 require(['jquery','jplayer'], function($) {
 
