--- a/public/clients/essais/index.html
+++ b/public/clients/essais/index.html
@@ -5,14 +5,18 @@
 <title>Essais</title>
 </head>
 <body>
-<ul>
-<li><a href="essai01.html">essai01</a></li>
-<li><a href="essai02.html">essai02</a> Html5 video tag with cloud.comptoir.net mp4 video</li>
-<li><a href="essai03.html">essai03</a> Html video play <a href="http://www.jplayer.org">jplayer.org</a></li>
-<li><a href="essai04.html">essai04</a> Html jplayer and full window size</li>
-<li><a href="essai05.html">essai05</a> Html5 full screen</li>
-<li><a href="essai06.html">essai06</a> Html5 Worker</li>
-<li><a href="essai07.html">essai07</a> replace video by another video</li>
-</ul>
+	<ul>
+		<li><a href="essai01.html">essai01</a></li>
+		<li><a href="essai02.html">essai02</a> Html5 video tag with
+			cloud.comptoir.net mp4 video</li>
+		<li><a href="essai03.html">essai03</a> Html video play <a
+			href="http://www.jplayer.org">jplayer.org</a></li>
+		<li><a href="essai04.html">essai04</a> Html jplayer and full
+			window size</li>
+		<li><a href="essai05.html">essai05</a> Html5 full screen</li>
+		<li><a href="essai06.html">essai06</a> Html5 Worker</li>
+		<li><a href="essai07.html">essai07</a> replace video by another
+			video</li>
+	</ul>
 </body>
 </html>
