client essai iframe webpage position

--- a/public/clients/essais/index.html
+++ b/public/clients/essais/index.html
@@ -17,6 +17,16 @@
 		<li><a href="essai06.html">essai06</a> Html5 Worker</li>
 		<li><a href="essai07.html">essai07</a> replace video by another
 			video</li>
+		<li><a href="essai08.html">essai08</a> affiche une page Html</li>
 	</ul>
+
+	<h2>À creuser</h2>
+	<p>YouTube</p>
+	<p>
+		<a href="https://github.com/tylerpearson/lazyYT">lazyYT.js</a> This is
+		a jQuery plugin to lazy load Youtube videos.
+	</p>
+	<p>Panorama</p>
+
 </body>
 </html>
