client essai iframe webpage position

--- a/public/clients/essais/index.html
+++ b/public/clients/essais/index.html
@@ -17,7 +17,8 @@
 		<li><a href="essai06.html">essai06</a> Html5 Worker</li>
 		<li><a href="essai07.html">essai07</a> replace video by another
 			video</li>
-		<li><a href="essai08.html">essai08</a> affiche une page Html</li>
+		<li><a href="essai08.html">essai08</a> affiche une page Html dans
+			iframe, avec positionnement (scroll) vertical</li>
 	</ul>
 
 	<h2>À creuser</h2>
