essai09 to test html5 localstorage accross pages

--- a/public/clients/essais/index.html
+++ b/public/clients/essais/index.html
@@ -19,6 +19,7 @@
 			video</li>
 		<li><a href="essai08.html">essai08</a> affiche une page Html dans
 			iframe, avec positionnement (scroll) vertical</li>
+		<li><a href="essai09.html">essai09</a> Html storage</li>
 	</ul>
 
 	<h2>À creuser</h2>
