--- a/public/pages/chrono.html
+++ b/public/pages/chrono.html
@@ -3,11 +3,22 @@
 <head>
 <meta charset="UTF-8">
 <title>Chrono</title>
+<style>
+html, body {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font-weight: normal;
+	background-color: white;
+	color: green;
+}
+</style>
 </head>
 <body>
 <h1>Chrono</h1>
 <h2 id="title"></h2>
-<div id="chrono"></div>
+<div id="chrono">00000</div>
 
 <script src="/js/require.js"></script>
 <script>
