--- a/public/clients/essais/index.html
+++ b/public/clients/essais/index.html
@@ -20,6 +20,7 @@
 		<li><a href="essai08.html">essai08</a> affiche une page Html dans
 			iframe, avec positionnement (scroll) vertical</li>
 		<li><a href="essai09.html">essai09</a> Html storage</li>
+		<li><a href="essai10.html">essai10</a> Websocket</li>
 	</ul>
 
 	<h2>À creuser</h2>
