--- a/public/clients/essais/index.html
+++ b/public/clients/essais/index.html
@@ -21,6 +21,7 @@
 			iframe, avec positionnement (scroll) vertical</li>
 		<li><a href="essai09.html">essai09</a> Html storage</li>
 		<li><a href="essai10.html">essai10</a> Websocket</li>
+		<li><a href="essai10.html">essai11</a> TTS avec AndGWS</li>
 	</ul>
 
 	<h2>À creuser</h2>
