--- a/public/clients/HtmlCli/htmlCli.html
+++ b/public/clients/HtmlCli/htmlCli.html
@@ -13,6 +13,7 @@ html, body {
 	font-size: 100%;
 	font-weight: normal;
 	background-color: black;
+	color: white;
 }
 #playground {
 	width: 100%;
@@ -34,20 +35,21 @@ html, body {
 		"use strict";
 
 		var worker = null;
-		var messagePlaying = false ;
+		var messagePlaying = null ;
 		var staticMediaTimer = null ;
 
 		require([ 'jquery', 'jplayer' ], function($) {
 
+			displayWaitForInstruction();
+
 			// debug/essai
 			//displayHtmlUrl({play_duration:15000, content: 'http://botq.localhost/pages/chrono.html#msg1'});
-			
-			
-			worker = new Worker('htmlCliWorker.js?'+(new Date()/1000));
+
+			worker = new Worker('htmlCliWorker.js?'+(new Date()/10));
 			worker.addEventListener('message', workerOnMessage, false);
 			worker.postMessage({
 				cmd : 'start'
-			}); // Send data to our worker.
+			});
 			
 		});
 
@@ -60,24 +62,88 @@ html, body {
 
 			console.log('htmlCli received a message: '+e.data.id);
 			console.log(e);
-			
+
 			if( staticMediaTimer ){
 				clearTimeout(staticMediaTimer);
 				staticMediaTimer = null ;
 			}
 
-			if( messagePlaying == true )
-				messagePlayDone(e.data, 'aborted');
-			messagePlaying = true ;
+			if( messagePlaying != null )
+			{
+				// Abort current message
+				messagePlayDone(messagePlaying, 'aborted');				
+			}
+			messagePlaying = e.data ;
 
 			if( e.data.content_type.indexOf('video/') == 0) {
 				displayVideo(e.data);
+
 			} else if( e.data.content_type == 'application/url' ) {
 				displayHtmlUrl(e.data);
+
+			} else if( e.data.content_type == 'application/tts' ) {
+				displayTts(e.data);
+
 			} else {
 				console.log('ERROR: unknow message type !');
 				messagePlayDone(e.data, 'error');
 			}
+		}
+
+		function displayTts(ttsMessage) {
+
+			console.log('displayTts');
+			
+			var content = JSON.parse( ttsMessage.content );
+			console.log('displayTts content: ');
+			console.log(content);
+
+			var html = '' ;
+			html += '<div>Playing TTS<blockquote>'+content.text+'</blockquote></div>';
+
+			$('#playground').html(html);
+
+			var url = 'ws://localhost:8080/action';
+
+			var connection = new WebSocket( url );
+
+			connection.onopen = function () {
+				console.log('TTS WebSocket Opened');
+				//connection.send('Ping');
+				connection.send( JSON.stringify( {action:"speak",message: content.text} ) );
+			};
+			connection.onclose = function(event) {
+				console.log('TTS WebSocket Closed');
+			};
+			connection.onerror = function (error) {
+				console.log('TTS WebSocket Error!');
+				console.log(error);
+				messagePlayDone(ttsMessage, 'error');
+			};
+			connection.onmessage = function (e) {
+				console.log('TTS WebSocket message: ' + e.data);
+				console.log(e);
+				var obj = JSON.parse(e.data);
+				console.log(obj);
+				
+				switch( obj.result )
+				{
+				case 'received':
+				case 'init':
+				case 'start':
+					break;
+				case 'done':
+					messagePlayDone(ttsMessage, 'done');
+					break;
+				case 'error':
+					console.log( 'ERROR: TTS encured an error: ' + obj.message+', data: '+obj.data );
+					messagePlayDone(ttsMessage, 'error');
+					break;
+				default:
+					console.log( 'ERROR: Unknow tts websocket message : ' + e.data );
+				}
+			};
+
 		}
 
 		function displayHtmlUrl(message) {
@@ -85,6 +151,8 @@ html, body {
 			console.log('displayHtmlUrl start for '+ message.play_duration);
 
 			var content = JSON.parse( message.content );
+			console.log('displayHtmlUrl content: ');
+			console.log(content);
 
 			var html = '' ;
 
@@ -103,12 +171,12 @@ html, body {
 				+' src="' + content.url + '"'
 				+' width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" />';
 
-				$('#playground').html(html);
+			$('#playground').html(html);
 
-			staticMediaTimer = setTimeout( displayHtmlUrlOnTimer, message.play_duration, message);
+			staticMediaTimer = setTimeout( staticMediaOnTime, message.play_duration, message);
 		}
 
-		function displayHtmlUrlOnTimer( message )
+		function staticMediaOnTime( message )
 		{
 			console.log('displayHtmlUrl ended');
 			//$(this).jPlayer("play"); // play again !
@@ -176,12 +244,19 @@ html, body {
 			});
 		}
 
+		function displayWaitForInstruction()
+		{
+			var html = '' ;
+			html += '<div>waiting for instruction ...</div>';
+			$('#playground').html(html);			
+		}
+
 		/**
-		 * to call when a message play is finished (done).
+		 * to call when a message play is finished (done, aborted or error).
 		 */
 		function messagePlayDone(message, status) {
 
-			messagePlaying = false ;
+			messagePlaying = null ;
 
 			var cmd ;
 			if( status == 'done') {
@@ -191,6 +266,9 @@ html, body {
 			} else if( status == 'error') {
 				cmd = 'messageError';
 			}
+
+			displayWaitForInstruction();
+
 			worker.postMessage({
 				'cmd' : cmd,
 				'message' : message
