--- a/public/clients/HtmlCli/htmlCli.html
+++ b/public/clients/HtmlCli/htmlCli.html
@@ -63,40 +63,69 @@ html, body {
 			console.log('htmlCli received a message: '+e.data.id);
 			console.log(e);
 
-			if( staticMediaTimer ){
-				clearTimeout(staticMediaTimer);
-				staticMediaTimer = null ;
-			}
 
 			if( messagePlaying != null )
 			{
+				if( staticMediaTimer ){
+					clearTimeout(staticMediaTimer);
+					staticMediaTimer = null ;
+				}
 				// Abort current message
-				messagePlayDone(messagePlaying, 'aborted');				
+				messagePlayDone(messagePlaying, 'aborted');
 			}
+			else
+			{
+				// Should never happend !!
+				if( staticMediaTimer ){
+					console.log('ERROR, no messagePlaying but a staticMediaTimer');
+					clearTimeout(staticMediaTimer);
+					staticMediaTimer = null ;
+				}
+			}
+
 			messagePlaying = e.data ;
 
 			try
 			{
 				if( e.data.content_type.indexOf('video/') == 0) {
-					displayVideo(e.data);
+					displayVideo(messagePlaying);
 
 				} else if( e.data.content_type == 'application/url' ) {
-					displayHtmlUrl(e.data);
+					displayHtmlUrl(messagePlaying);
+
+				} else if( e.data.content_type == 'text/plain' ) {
+					displayPlainText(messagePlaying);
 
 				} else if( e.data.content_type == 'application/tts' ) {
-					displayTts(e.data);
+					displayTts(messagePlaying);
 
 				} else {
 					console.log('ERROR: unknow message type !');
-					messagePlayDone(e.data, 'error');
+					messagePlayDone(messagePlaying, 'error');
 				}
-				
+
 			}
 			catch(ex)
 			{
 				console.log('ERROR: '+ex.name+', '+ex.message );
-				messagePlayDone(e.data, 'error');
+				messagePlayDone(messagePlaying, 'error');
 			}
+		}
+
+		function displayPlainText(textMessage)
+		{
+			console.log('displayPlainText');
+			
+			var content = JSON.parse( textMessage.content );
+			console.log('displayPlainText content: ');
+			console.log(content);
+
+			var html = '' ;
+			html += '<div><blockquote>'+content.text+'</blockquote></div>';
+
+			$('#playground').html(html);
+
+			staticMediaTimer = setTimeout( staticMediaOnTime, textMessage.play_duration, textMessage);
 		}
 
 		function displayTts(ttsMessage) {
