remove unused Exception class

--- a/public/clients/HtmlCli/htmlCli.html
+++ b/public/clients/HtmlCli/htmlCli.html
@@ -109,7 +109,7 @@ html, body {
 			}
 			catch(ex)
 			{
-				console.log('ERROR: '+ex.name+', '+ex.message );
+				console.log('ERROR htmlCli: '+ex.name+', '+ex.message );
 				console.log(ex);
 				messagePlayDone(messagePlaying, 'error');
 			}
